2012-03-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c,
	  support/regression/tests/bug-3495411.c,
	  Fixed #3495411 and another --oldralloc bug.

2012-03-02 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed pdf generation;
	  added chapter 1.2 SDCC Suite Licenses;
	  libraries license should be at least as liberal as the GPLv2+LE;
	  note about GPL incompatible pic device libraries;
	  added link to "List of the SDCC library" wiki page;
	  added link to "SDCC - Small Device C Compiler Wiki" wiki page;
	  use term "SDCC suite";
	  formatting cleaning
	* doc/README.txt: changed chapters Licenses and Authors and interested persons

2012-03-01 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucz80/spec.mk:
	  simulation timeout icreased to 20s due to several tests
	  failures on sparc64-unknown-netbsd platform
	* configure.in, configure: report CPPFLAGS and LDFLAGS settings
	* support/sdbinutils/bfd/configure.in,
	  support/sdbinutils/bfd/configure,
	  PKGVERSION set to (sdbinutils derived from GNU Binutils),
	  BUGURL set to http://sourceforge.net/tracker/?group_id=599&atid=100599
	* support/sdbinutils/binutils/version.c:
	  --vesion shown sd* names instead GNU *

2012-03-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20080506-1.c,
	  support/regression/tests/gcc-torture-execute-20080506-2.c:
	  Disable tests for gcc versions earlier than 5.0.

2012-03-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/cse.c: new tests checking for CSE problems

2012-02-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/2000*.c:
	  More tests from gcc.

2012-02-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20000402-1.c:
	  Disable test since unsigned long long is not yet fully supported.